--- a/frontend/src/components/Button/Button.module.css
+++ b/frontend/src/components/Button/Button.module.css
@@ -17,17 +17,11 @@
   right: 0;
   position: absolute;
   top: 0;
-  background: white;
   padding: 0;
-  border: 1px solid black;
-  border-radius: 5px;
-
   display: flex;
   align-items: center;
-}
-
-.closeButton:hover {
-  background: #f9f9f9;
+  background: transparent;
+  border: none;
 }
 
 .prevButton,
