--- a/frontend/src/components/Slider/Slider.module.css
+++ b/frontend/src/components/Slider/Slider.module.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   position: absolute;
-  background: #d8d8d8;
   justify-content: center;
   top: 0;
   bottom: 0;
@@ -13,9 +12,23 @@
 .imageContainer {
   margin: 0 20px;
   position: relative;
+  left: 30px;
 }
 
 .imageContainer img {
-  width: auto;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  width: 1100px;
+  object-fit: cover;
+}
+
+.closeButton img {
+  width: auto;
+}
+
+.navigation {
+  position: relative;
+}
+
+.navigation button {
+  position: absolute;
 }
